[build-system]
requires = [
    "setuptools>=43.0.0",
    "wheel"
]
build-backend = "setuptools.build_meta"


[project]
name = "objx"
description = "object library."
version = "30"
authors = [
    {name = "Bart Thate",email = "libbotx@gmail.com"},
]
readme = "README.rst"
license = {text="Public Domain"}
classifiers = [ 
    'Development Status :: 3 - Alpha',
    'License :: Public Domain',
    'Operating System :: Unix',
    'Programming Language :: Python',
    'Topic :: Utilities'
]


[project.scripts]
sbn = "objx.__main__:wrapped"
sbnd = "objx.__main__:daemoned"


[project.urls]
"home" = "https://pypi.org/project/objx"
"bugs" = "https://github.com/botlibx/objx/issues"
"source" = "https://github.com/botlibx/objx"


[tool.setuptools]
packages = [
    "objx",
]
zip-safe=true


[tool.setuptools.data-files]
"share/doc/objx" = [
    "docs/MANUAL.rst",
    "docs/README.rst"
]

[tool.setuptools.exclude-package-data]
"*" = [
       "env*",
       "html*",
       "test*"
      ]
